update add collab

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/olfataVz/analisis-data_prsa-air-quality/blob/main/notebook.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "# Proyek Analisis Data: Air Quality Dataset\n",
     "- **Nama:** Lalu Olfata Vedora Zurji\n",
